<resources>

    <string name="app_name">Robird</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="tweets">Tweets</string>
    <string name="mentions">Mentions</string>
    <string name="retweets">Retweets</string>
    <string name="favorites">Favorites</string>
    <string name="directs">Direct Messages</string>
    <string name="lists">Lists</string>
    <string name="whats">What\'s happening?</string>
    <string name="compose">Compose</string>
    <string name="camera">Camera</string>
    <string name="tweet">Tweet</string>
    <string name="retweet">Retweet</string>
    <string name="favorite">Favorite</string>
    <string name="copy">Copy</string>
    <string name="successfully_retweeted">Successfully retweeted</string>
    <string name="successfully_favorited">Successfully favorited</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="successfully_unfavorited">Successfully unfavorited</string>
    <string name="successfully_unretweeted">Successfully unretweeted</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share">Share</string>
    <string name="friends">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="report_spam">Report spam</string>
    <string name="unfollow">Unfollow</string>
    <string name="following_you">Following you</string>
    <string name="not_following_you">Not following you</string>
    <string name="schedule">Schedule</string>
    <string name="tweet_is_too_long">Tweet is too long</string>
    <string name="successfully_tweeted">Successfully tweeted</string>
    <string name="at">At sign</string>
    <string name="hashtag">Hashtag</string>
    <string name="search">Search</string>
    <string name="users">Users</string>
    <string name="delete">Delete</string>
    <string name="add_to_list">Add to list</string>
    <string name="user_added_to_list">\@%1$s added to %2$s list</string>
    <string name="direct">Direct message</string>
    <string name="reply">Reply</string>
    <string name="purchased">Successfully purchased</string>
    <string name="images">Images</string>
    <string name="world_trends">World Trends</string>
    <string name="local_trends">Local Trends</string>
    <string name="trends">Trends</string>
    <string name="unlock_all_features">Unlock all features</string>
    <string name="already_purchased">Already purchased</string>
    <string name="ui_category_settings">UI Settings</string>
    <string name="prefer_dark_theme">Prefer dark theme</string>
    <string name="other_settings">Other Settings</string>
    <string name="unlock_ui_settings">Unlock UI Settings</string>
    <string name="timeline_font_size">Timeline font size</string>
    <string name="hide_avatars">Hide avatars on mobile connection</string>
    <string name="hide_image_preview">Hide previews on mobile connection</string>
    <string name="chrome_needed">Latest version of Chrome needed</string>
    <string name="enable_in_app_browser">Enable In-App Browser</string>
    <string name="enable_mobile_view">Enable mobile view</string>
    <string name="unlock_browser">Unlock In-App Browser</string>
    <string name="unlock_other_settings">Unlock Other Settings</string>
    <string name="browser">In-App Browser</string>
    <string name="highlight_timeline_links">Highlight timeline links</string>
    <string name="background_update_service">Enable background updates</string>
    <string name="refresh">Refresh</string>
    <string name="background_update_period">Background update interval</string>
    <string name="notifications">Notifications</string>
    <string name="new_mentions">You have %d unread mentions</string>
    <string name="tweetmarker">TweetMarker</string>
    <string name="twitter_streaming">Streaming</string>
    <string name="twitter_streaming_summary">Enables support of twitter streaming</string>
    <string name="native_retweet">Native</string>
    <string name="quote_retweet">Quote</string>
    <string name="save">Save</string>
    <string name="show_client_name">Show client name in timeline</string>
    <string name="image_saved">Image saved</string>
    <string name="type_something">Type something</string>
    <string name="restore_purchase_history">Restore Purchase History</string>
    <string name="purchase_history_restored">Purchase history restored</string>
    <string name="need_app_restart">Need app restart</string>
    <string name="show_absolute_time">Show absolute time</string>
    <string name="compact_timeline">Compact timeline</string>
    <string name="notification_sound">Notification sound</string>
    <string name="show_media_preview">Show media preview</string>
    <string name="rate_limit">Rate limit exceeded. %d seconds until reset.</string>
    <string name="copy_url">Copy tweet url</string>
    <string name="notification_ringtone">Notification ringtone</string>
    <string name="rate_title">Rate Robird Reborn</string>
    <string name="rate_message">If you enjoy using this app, please take a moment to rate it. Thanks for your support!</string>
    <string name="no_thanks">No thanks</string>
    <string name="rate">Rate Now</string>
    <string name="later">Later</string>
    <string name="video">Video</string>
</resources>
