<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ui_category_settings">

        <Preference
            app:key="unlock_ui_settings"
            app:title="@string/unlock_ui_settings" />

        <SwitchPreferenceCompat
            app:key="prefer_dark_theme"
            app:title="@string/prefer_dark_theme" />

        <SwitchPreferenceCompat
            app:key="compact_timeline"
            app:title="@string/compact_timeline" />

        <SwitchPreferenceCompat
            app:key="highlight_timeline_links"
            app:title="@string/highlight_timeline_links" />

        <SwitchPreferenceCompat
            app:key="client_name"
            app:title="@string/show_client_name" />

        <SwitchPreferenceCompat
            app:key="absolute_time"
            app:title="@string/show_absolute_time" />

        <ListPreference
            app:defaultValue="14"
            app:entries="@array/timeline_font_size"
            app:entryValues="@array/timeline_font_size"
            app:key="font_size"
            app:summary="14"
            app:title="@string/timeline_font_size" />

        <SwitchPreferenceCompat
            app:key="hide_media"
            app:title="@string/hide_image_preview" />

        <SwitchPreferenceCompat
            app:key="hide_avatars"
            app:title="@string/hide_avatars" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/browser">

        <Preference
            app:key="unlock_browser"
            app:title="@string/unlock_browser" />

        <SwitchPreferenceCompat
            app:key="use_in_app_browser"
            app:summary="@string/chrome_needed"
            app:title="@string/enable_in_app_browser" />

        <SwitchPreferenceCompat
            app:key="in_app_browser_mobile"
            app:title="@string/enable_mobile_view" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_settings">
        <Preference
            app:key="unlock_other_settings"
            app:title="@string/unlock_other_settings" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="background_update_service"
            app:title="@string/background_update_service" />

        <ListPreference
            app:defaultValue="1800000"
            app:dependency="background_update_service"
            app:entries="@array/background_update_period_entries"
            app:entryValues="@array/background_update_period_values"
            app:key="background_updates_interval"
            app:title="@string/background_update_period" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="background_update_service"
            app:key="notifications"
            app:title="@string/notifications" />

        <SwitchPreferenceCompat
            app:dependency="background_update_service"
            app:key="tweetmarker"
            app:title="@string/tweetmarker" />
    </PreferenceCategory>

    <Preference
        app:key="unlock_all_settings"
        app:title="@string/unlock_all_features" />

    <Preference
        app:key="restore"
        app:title="@string/restore_purchase_history" />
</PreferenceScreen>